# smtp-client

./: README.md  docker-compose.yml  pyproject.toml  pytest_results.txt
smtp_client/: __init__.py  client.py  email.py  exceptions.py
tests/: conftest.py  test_client.py  test_email.py
