[project]
name = "smtp-client"
version = "0.1.0"
description = "A lightweight SMTP client built on Python stdlib"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require Mailpit (deselect with '-m \"not integration\"')",
]
